# connect-eaas-cat-as-a-service

./: .flake8  .gitignore  CHANGELOG.md  HOWTO.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml  test.yml
caas_ext/: __init__.py  extension.json  extension.py  messages.py
caas_ext/connect/: sources.py
caas_ext/connect/api/: mixins.py
caas_ext/connect/configuration/: mixins.py
caas_ext/custom_events/: health_check.py
caas_ext/flows/: __init__.py  purchase_flow.py
caas_ext/process/: cancel.py  purchase.py
caas_ext/services/: providers.py
caas_ext/services/connect/: sources.py
caas_ext/validations/: purchase.py
cats/orders/application/: services.py
cats/orders/domain/: contracts.py  exceptions.py  models.py  services.py
cats/orders/infrastructure/: http.py
cats/shared/application/: services.py
cats/shared/domain/: exceptions.py  models.py  services.py
cats/shared/infrastructure/: exceptions.py  http.py
cats/subscriptions/application/: services.py
cats/subscriptions/domain/: contracts.py  exceptions.py  models.py  services.py
cats/subscriptions/infrastructure/: http.py
cats_as_a_service/orders/application/: services.py
cats_as_a_service/orders/domain/: contracts.py  exceptions.py  models.py  services.py
cats_as_a_service/orders/infrastructure/: http.py
cats_as_a_service/shared/domain/: exceptions.py
cats_as_a_service/shared/infrastructure/: http.py
cats_as_a_service/subscriptions/application/: services.py
cats_as_a_service/subscriptions/domain/: contracts.py  exceptions.py  models.py  services.py
cats_as_a_service/subscriptions/infrastructure/: http.py
tests/: conftest.py  test_cat_as_a_service.py
tests/features/: purchase.feature
tests/functional/: test_purchase.py  test_purchase_flow.py
tests/integration/orders/: test_http.py
tests/integration/subscriptions/: test_http.py
tests/unit/order/: test_application.py  (+1 more)
(+4 files in other folders)
